--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,3 +1,26 @@
+.pic_list p {
+	display:block;
+	width:100%;
+	border:1px solid #4D4D4D;
+}
+.pic_list p img {
+	float:left;
+	width:100px;
+	border: 1px solid #476042;
+	padding:1px;
+	margin: 5px 10px 5px 5px;
+}
+
+.pic_list b {
+	font:2em tahoma;
+}
+
+.pic_list hr {
+	width:50%;
+	margin:5px;
+	padding:0px;
+}
+
 .current {
     color: green;
 }
@@ -199,7 +222,7 @@ padding: 5px;
 
 		/* HEADING PROPERTIES */
 h1 {
-width: 30%;
+// width: 30%;
 font-size: 200%;
 letter-spacing: 5px;
 color:#6A9662;
