Minor fixes. Testing full location layout

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <div id="footer">
-    <a href="Home.html">homepage</a> | 
+    <a href="index.md">homepage</a> | 
     <a href="contact.html">contact</a> | 
     <a href="Site_Map">site map</a> | 
     <a href="https://discord.com/channels/1022641517170540574/1022641518269444228">discord</a> | 
