--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
 <div id="footer">
-    <a href="index.md">homepage</a> | 
+    <a href="/">homepage</a> | 
     <a href="contact.html">contact</a> | 
-    <a href="Site_Map">site map</a> | 
+    <a href="/Site_Map">site map</a> | 
     <a href="https://discord.com/channels/1022641517170540574/1022641518269444228">discord</a> | 
     <a href="http://validator.w3.org/check?uri=referer">xhtml</a> | 
     <a href="http://jigsaw.w3.org/css-validator">css</a> | 
