the big layout update

--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,4 +1,4 @@
 <div id="banner">
-    <h1>wwww.bladesinthephiladelphia.com</h1>
+    <h1>wwww.BladesInThePhiladelphia.com</h1>
 </div>
 {% include nav_bar.html %}
