--- a/_sass/wiki/wikibox.sass
+++ b/_sass/wiki/wikibox.sass
@@ -2,18 +2,32 @@
 
 #wikibox 
     float: right
-    width: 30%
-    border: 1px solid $charcoal
-    border-radius: 2px
+    text-align: left
+    max-width: 35%
+    border: 2px solid $charcoal
     background: $dark-slate
     padding: 0px
-    margin: 0px 20px    
+    margin: 0 0 0 2em
     li
         display: block
         color: $ash-grey
-        img 
-            width: 80%!important
-            border: 1px solid $charcoal
-
+        padding: 0.1em 1em 
+        
+    td img 
+        max-width: 80%!important
+        border: 1px solid $charcoal
+        
     h3
-        margin-top: 0px
+        margin: 0px auto
+        text-align: center
+
+.wb_header 
+    background: $charcoal
+    font-size: 1.2em
+
+.wb_excerpt
+    background: $charcoal
+    font-size: 0.9em
+    td
+        padding: 0.5em
+        
