--- a/assets/css/wiki.scss
+++ b/assets/css/wiki.scss
@@ -6,5 +6,4 @@
 @import "fonts/defaults";
 
 @import "wiki/wikibox";
-@import "wiki/notice";
-@import "wiki/footnotes";
+@import "wiki/special_text";
