--- a/_layouts/wiki.html
+++ b/_layouts/wiki.html
@@ -9,46 +9,14 @@ layout: default
 {% endif %}
 
 <h1>{{preferred-name}}</h1>
+<p class="last_update">Last updated on {{page.last_updated | date: "%B %d, %Y"}}.</p>
 
 {% if page.faction-type %}
     {% include war_check.html %}
 {% endif %}
 
-{% if page.collection == "player_characters" %}  
-    {% assign box_keys = "picture,name,pronouns,playbook,status,excerpt,player" | split: ","%}
-    {% assign pic_url = page.picture %}
-    {% unless page.alias %}
-        {% assign page.alias = page.name %}
-    {% endunless %}
-    {% assign header = page.alias %}
-    
-{% elsif page.collection == "locations" %}
-    {% assign header = page.name %}
-    {% if page.picture %}
-        {% assign box_keys = "picture,name,region,city,neighborhood" | split: "," %}
-        {% assign pic_url = page.picture %}
-    {% elsif page.map %}
-        {% assign pic_url = "maps/" | append: page.map %}
-        {% assign box_keys = "picture,name,region,city,neighborhood" | split: "," %}
-    {% else %}
-        {% assign box_keys = "name,region,city,neighborhood" | split: "," %}
-    {% endif %}
-{% endif %}
-
-{% if box_keys %}
-<ul id="wikibox">
-    <li>
-        <h3>{{ header }}</h3></li>
-    {% for key in box_keys %}
-        <li>
-            {% if key == "picture" %}
-                <img src="{{ site.baseurl }}/{{page.img_root | append: pic_url}}">
-            {% elsif page[key] %}
-                <b>{{key}}:</b> {{page[key]}}
-            {% endif %}
-        </li>
-    {% endfor %}
-</ul>
+{% if page.collection %}
+{% include wikibox.html %}
 {% endif %}
 
 {{content}}
