Add a clock widget

--- a/assets/css/landing.scss
+++ b/assets/css/landing.scss
@@ -4,5 +4,5 @@
 @import "pic_list";
 @import "site_nav";
 @import "fonts/defaults";
-
-@import "wiki/landing"
+@import "widgets";
+@import "wiki/landing";
