--- a/_sass/widgets.sass
+++ b/_sass/widgets.sass
@@ -19,7 +19,6 @@ tr.clock
         text-align: right
         padding: 0 0 0 1em
 
-
     td.filled
         background: $light-green
         color: $charcoal!important
@@ -43,3 +42,24 @@ div.center
 div.right
     margin-right: 0
     margin-left: auto
+
+// perks table
+table.perks
+    font-size: 0.9em
+    text-align: left
+    margin: 1em auto
+
+    tr
+        background: $charcoal
+    th
+        padding: 0.5em 1em
+        background: $mid-green
+    td
+        padding: 0.2em 1em
+
+    p 
+        padding: 0 1em 0.2em
+        margin: 0 -1em
+        border-top: 2px solid $dark-slate
+    p:first-of-type
+        border: 0
