Update documentation sass

--- a/_sass/docs.sass
+++ b/_sass/docs.sass
@@ -5,3 +5,47 @@ table
         background: $charcoal
     td, th
         padding: 0.1em 1em
+
+// p:has(img)
+//     width: 100%
+//     height: fit-content
+//     border: 1px solid red
+//     margin: 1em auto
+//     display: block
+img
+    width: 100%
+    margin: 1em auto
+    display: block
+
+ol li
+    padding: 0.5em
+
+div#toc
+    width: 30%
+    float: right
+    clear: both
+    background: $charcoal
+    margin: 0 1em 1em
+    padding: 0
+    overflow-x: hidden
+
+    b
+        display: block
+        width: 100%
+        background: $mid-green
+        padding-left: 1em
+        margin-top: 0
+        line-height: 2em
+        
+
+ul#markdown-toc
+    
+    padding: 0 1em 1em
+    margin: 0em
+    text-align: left
+    list-style: inside
+    font-size: 0.9em
+
+    ul 
+        padding-left: 1em
+
