--- a/_sass/widgets.sass
+++ b/_sass/widgets.sass
@@ -1,13 +1,16 @@
 @import _colors
     
 /* clock defaults */
-tr.clock 
+
+table.clock 
+    margin: 0
     td 
-        width: 0.9em
+        width: 0.8em
         background: $mid-green
+        padding: 0
 
     td:first-of-type, td.last
-        width: fit-content
+        width: fit-content!important
         background: $charcoal
         font-variant: small-caps
 
