--- a/assets/css/default.scss
+++ b/assets/css/default.scss
@@ -2,7 +2,6 @@
 ---
 @import "layout";
 @import "site_nav";
-@import "fonts/headers";
-@import "fonts/defaults";
+@import "_defaults";
 @import "wiki/wiki_list";
 @import "widgets";
