--- a/assets/css/landing.scss
+++ b/assets/css/landing.scss
@@ -3,6 +3,6 @@
 @import "layout";
 @import "pic_list";
 @import "site_nav";
-@import "fonts/defaults";
+@import "_defaults";
 @import "widgets";
 @import "wiki/landing";
