--- a/assets/css/docs.scss
+++ b/assets/css/docs.scss
@@ -2,7 +2,6 @@
 ---
 @import "layout";
 @import "site_nav";
-@import "fonts/headers";
-@import "fonts/defaults";
+@import "_defaults";
 @import "widgets";
 @import "docs";
