tweaking gang page stylesheet

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,7 @@
             {% endif %}
         </title>
         <link rel="stylesheet" href="/assets/css/{{page.layout}}.css">
+        <link rel="stylesheet" href="/assets/css/{{page.stylesheet}}.css">
         <link rel="stylesheet"
           href="https://fonts.googleapis.com/css2?family=Barlow">
 
