use banner.jpg instead of remote for banner bg

--- a/_sass/_layout.sass
+++ b/_sass/_layout.sass
@@ -19,7 +19,7 @@ body
     height: 100px
     padding: 0px
     margin: 0 
-    background: $dark-slate url(https://www.cs.drexel.edu/~pmk65/BladesinthePhiladelphia/banner.jpg)
+    background: $dark-slate url(/assets/img/layout/banner.jpg)
     background-position: center left
     background-size: 200px
     color: #333
