update branding to vseaphilly

--- a/_sass/_layout.sass
+++ b/_sass/_layout.sass
@@ -16,19 +16,26 @@ body
     border-width: 0 3px
 
 #banner 
-    height: 100px
+    height: 120px
     padding: 0px
     margin: 0 
     background: $dark-slate url(/assets/img/layout/banner.jpg)
-    background-position: center left
+    background-position: center 85%
     background-size: 200px
     color: #333
+    text-align: center
     h1 
         margin: 0
         border: 0
-        padding: 20px 30px
-        font: small-caps 40px Barlow
+        font: small-caps 70px Barlow
+        color: $ash-grey
+        
+    h2 
+        margin: 0
+        font-style: italic
         color: $light-green
+        text-transform: lowercase
+        font-size: 20px
 
 #content
     margin: 0 auto 0
