--- a/_includes/banner.html
+++ b/_includes/banner.html
@@ -1,4 +1,5 @@
 <div id="banner">
-    <h1>wwww.BladesInThePhiladelphia.com</h1>
+    <h1>Void Sea Philly</h1>
+    <h2>It's always stabby in Philadelphia</h2>
 </div>
 {% include nav_bar.html %}
