--- a/_includes/wikibox.html
+++ b/_includes/wikibox.html
@@ -1,4 +1,5 @@
 {% assign box-data = "" %}
+{% assign roman_numerals = "0,I,II,III,IV,V,VI" | split: "," %}
 {% if page.collection == "player_characters" %}
   {% if page.picture %}
     {% assign box-data = box-data | append: ",," | append: "_picture::" | append: page.img_root | append: page.picture %}
@@ -56,7 +57,7 @@
   {% if page.faction-type %}
     {% assign faction-data = site.data.world.factions[page.faction-type] | where: "id", page.w-id | first %}
     {% assign box-data = box-data | append: ",," | append: "faction type::" | append: page.faction-type %}
-    {% assign box-data = box-data | append: ",," | append: "tier::" | append: faction-data.tier %}
+    {% assign box-data = box-data | append: ",," | append: "tier::" | append: roman_numerals[faction-data.tier] %}
     {% assign box-data = box-data | append: ",," | append: "hold::" | append: faction-data.hold %}
     {% assign box-data = box-data | append: ",," | append: "faction status::" | append: faction-data.status %}
   {% elsif page.factions %}
@@ -77,9 +78,9 @@
   {% if page.picture %}
     {% assign box-data = box-data | append: ",," | append: "_picture::" | append: page.img_root | append: page.picture %}
   {% endif %}
-
+{{roman_numerals[faction.tier] }}
   {% assign box-data = box-data | append: ",," | append: "type::" | append: page.faction-type %}
-  {% assign box-data = box-data | append: ",," | append: "tier::" | append: faction-data.tier %}
+  {% assign box-data = box-data | append: ",," | append: "tier::" | append: roman_numerals[faction-data.tier] %}
   {% assign box-data = box-data | append: ",," | append: "hold::" | append: faction-data.hold %}
   {% assign box-data = box-data | append: ",," | append: "status::" | append: faction-data.status %}
 
