--- a/_sass/wiki/wiki_list.sass
+++ b/_sass/wiki/wiki_list.sass
@@ -6,11 +6,12 @@
     width: 100%
 
     li
-        margin: 0em 1em
+        margin: 1em 1em
         display: inline-block
         clear: both
         vertical-align: top
-        width: 25em
+        width: 45%
+        min-width: 25em
         text-align: left
         border-width: 1px 1px 2px 1px
         padding: 2px 5px
