updates from 2/22 session

--- a/_sass/widgets.sass
+++ b/_sass/widgets.sass
@@ -1,7 +1,25 @@
 @import _colors
     
-/* clock defaults */
 
+a.button
+    display: inline-block
+    min-width: 10em
+    max-width: 15em
+    background: $charcoal
+    padding: 1em
+    margin: 1em 2em
+    text-align: center
+    font-variant: small-caps
+    border-radius: 1em
+    border: 1px solid $mid-green
+    font-size: 1.2em
+
+    &:hover
+        text-decoration: none
+        background: $mid-green
+        border-color: $light-green
+
+/* clock defaults */
 table.clock 
     margin: 0
     td 
