story formatting updates

--- a/_sass/specific_styles/story.sass
+++ b/_sass/specific_styles/story.sass
@@ -14,6 +14,7 @@ $layout-break-small: 900px
         width: 15em
         float: left
         overflow-x: hidden
+        min-height: 15em
         margin: 0
         padding: 0
 
@@ -46,10 +47,6 @@ $layout-break-small: 900px
                         
             &:hover span, &:target span 
                 display: block
-                
-                
-            
-
 
 @media screen and (max-width: $layout-break-small)
     .act-box ol li:hover span
