--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,7 @@
                 {{ page.title }} | {{ site.title }}
             {% endif %}
         </title>
+        <link rel="stylesheet" href="/assets/css/default.css">
         <link rel="stylesheet" href="/assets/css/{{page.layout}}.css">
         <link rel="stylesheet" href="/assets/css/{{page.stylesheet}}.css">
         <link rel="stylesheet"
