Display session recap title on story pages

--- a/_sass/_defaults.sass
+++ b/_sass/_defaults.sass
@@ -36,6 +36,7 @@ h1
     color: $ash-grey
     display: block
     border-bottom: 1px solid $ash-grey
+    text-align: left
 
 h2
     color: $light-green
