--- a/_sass/_layout.sass
+++ b/_sass/_layout.sass
@@ -31,6 +31,7 @@ body
         border: 0
         font: small-caps 70px Barlow
         color: $ash-grey
+        text-align: center
         
     h2 
         margin: 0
