--- a/_sass/specific_styles/story.sass
+++ b/_sass/specific_styles/story.sass
@@ -1,6 +1,11 @@
 @import '_colors'
 $layout-break-small: 900px
 
+
+.session_header 
+    width: 100%
+    text-align: center
+    padding-bottom: 1em
 .act-box
     width: 90%
     margin: 1em auto
