--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,10 @@
                     {% assign title = page.w-id%}
                 {% endif %}
             {{ title | replace: "_", " " | append: " | Wiki | " | append: site.title }}
+            {% elsif page.categories contains "story" %}
+                {% assign folder = page.date | date: "%Y-%m-%d" %}
+                {%assign recap = site.tags.session-recap | where: "categories",folder | first%}
+                {{recap.title}} | Story | {{site.title}}
             {% elsif page.title == "home" %}
                 {{site.title}}
             {% else %}
@@ -64,6 +68,7 @@
             {% include banner.html %} 
 
             <div id="content">
+
                 {{ content }}
             </div>
         
